--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,9 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="receive_toncoin">Receive Toncoin</string>
+    <string name="biometric_log_in">Biometric Log In</string>
+    <string name="log_in_using_your_biometric_credential">Log in using your biometric credential</string>
+    <string name="cancel">Cancel</string>
+    <string name="your_fingerprint_does_not_match">Your fingerprint does not match.</string>
 </resources>
