--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ton_wallet_challenge</string>
+    <string name="app_name">Toncoin Wallet</string>
     <string name="recovery_phrase_title">Your Recovery Phrase</string>
     <string name="recovery_phrase_content">Write down these 24 words in this exact order and keep them in a secure place. Do not share this list with anyone. If you lose it, you will irrevocably lose access to your TON account.</string>
     <string name="wallet_screen_content">TON wallet allows you to make fast and secure blockchain-based payments without intermediaries.</string>
